# varvis-connector

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.agents/: research.md
.agents/skills/update-dependencies/: SKILL.md
.agents/skills/update-dependencies/agents/: openai.yaml
.github/: CODEOWNERS  dependabot.yaml  issue-template-dep-updates.md
.github/workflows/: build_and_release.yaml  codequality.yaml  dependencies_audit.yaml  dependencies_update.yaml  docs.yaml  gitleaks.yaml  tests.yaml
docs/: Makefile
docs/source/: changelog.rst  conf.py  development.rst  index.rst  installation.rst  introduction.rst
docs/source/api/: client.rst  errors.rst  index.rst  models.rst
docs/source/usage/: api.rst  cli.rst  index.rst
scripts/: audit-deps.sh  coverage-check.sh  create-pr.sh  create-release.sh  test-all.sh
src/varvis_connector/: __init__.py  __main__.py  _cli.py  _cli_colors.py  _log.py  _varvis_client.py  errors.py  models.py
tests/: __init__.py  _common.py  test_cli.py  test_log.py  test_varvis.py  test_varvis_internal.py
