[project]
name = "varvis-connector"
version = "0.2.0"
description = "A Python package and CLI tool for interacting with the Varvis® API."
readme = "README.md"
authors = [
  { name = "Markus Konrad", email = "markus.konrad@laborberlin.com" },
  { name = "Bernt Popp", email = "bernt.popp@laborberlin.com" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["api", "varvis", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = ["pydantic>=2.13.2", "requests>=2.33.1", "tqdm>=4.67.3"]

[project.urls]
Homepage = "https://github.com/LaborBerlin/varvis-connector"
Documentation = "https://laborberlin.github.io/varvis-connector/"
Repository = "https://github.com/LaborBerlin/varvis-connector"
Issues = "https://github.com/LaborBerlin/varvis-connector/issues"
Changelog = "https://github.com/LaborBerlin/varvis-connector/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
  "coverage>=7.13.5",
  "genbadge[coverage]>=1.1.3",
  "pre-commit>=4.5.1",
  "pytest>=9.0.3",
  "pytest-xdist>=3.7.0",
  "ruff>=0.15.11",
  "types-requests>=2.33.0.20260408",
  "requests-mock>=1.12.1",
  "inline-snapshot>=0.32.6",
  "polyfactory>=3.3.0",
  "types-tqdm>=2.33.0.20260408",
  "bandit[toml]>=1.9.4",
  "pip-audit>=2.10.0",
  "git-cliff>=2.12.0",
  "basedpyright>=1.39.2",
]
docs = ["sphinx>=8.1.3", "sphinx-autodoc-typehints>=3.0.0"]

[project.scripts]
varvis_connector = "varvis_connector.__main__:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
native-tls = true
required-version = ">=0.10.0"
exclude-newer = "7 days"      # implement dependency cooldown: ignore updates released up to 7 days ago
# temporarily exclude pip from dep. cooldown to get the latest vuln. fix
exclude-newer-package = { pip = false }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# rules to ingore:
# - F811: Redefinition of unused variable; we have to do this with pytest fixtures
ignore = ["F811"]

[tool.basedpyright]
typeCheckingMode = "basic"
include = ["src", "tests"]

[tool.coverage.run]
source = ["src", "tests"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.git-cliff.changelog]
header = "# Changelog\n\n"

body = """
{% if version %}\
    ## {{ version | trim_start_matches(pat="v") }} - {{ timestamp | date(format="%Y-%m-%d") }}\n\
{% else %}\
    ## Unreleased\n\
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}\n
    {% for commit in commits | unique(attribute="message") %}\
        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }}
    {% endfor %}\
{% endfor %}\n
"""

[tool.git-cliff.git]
require_conventional = true # lint commit messages
fail_on_unmatched_commit = true # also required to lint commit messages
ignore_tags = "\\.dev[0-9]+$" # don't show development tags (but include their commits)
commit_parsers = [
  { message = "bump version", skip = true },
  { message = "version bump", skip = true },
  { message = "^Merging", skip = true },
  { message = "^Merge", skip = true },
  { message = "^wip", skip = true },
  { message = "^feat", group = "Features" },
  { message = "^fix", group = "Bug Fixes" },
  { message = "^doc", group = "Documentation" },
  { message = "^perf", group = "Performance" },
  { message = "^refactor", group = "Refactor" },
  { message = "^style", group = "Styling" },
  { message = "^test", group = "Testing" },
  { message = "^ci", group = "CI" },
  { message = "^build", group = "Development" },
  { message = "^chore", group = "Other" },
]
commit_preprocessors = [
  # remove gitmoji, both actual UTF emoji and :emoji:
  { pattern = ' *(:\w+:|[\p{Emoji_Presentation}\p{Extended_Pictographic}](?:\u{FE0F})?\u{200D}?) *', replace = "" },
]

[tool.bandit]
# B101 - use assert
skips = ["B101"]
exclude_dirs = ["tests"]
